--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/testcookbook/js-cucumber-selenium#readme",
   "dependencies": {
     "assert": "^1.4.1",
+    "canvas": "^2.3.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^2.24.1",
@@ -27,6 +28,7 @@
     "fs": "0.0.1-security",
     "geckodriver": "^1.1.3",
     "id": "0.0.0",
+    "jdenticon": "^2.1.1",
     "loader": "^2.1.1",
     "selenium-webdriver": "^3.0.0-beta-3",
     "utils": "^0.3.1",
