--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jdenticon": "^2.1.1",
     "loader": "^2.1.1",
     "selenium-webdriver": "^3.0.0-beta-3",
+    "sleep": "^6.0.0",
     "utils": "^0.3.1",
     "wd": "^1.11.1",
     "xpath": "0.0.27"
