--- a/package.json
+++ b/package.json
@@ -1,40 +1,19 @@
 {
-  "name": "js-cucumber-selenium",
+  "name": "calculator-tests",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "cucumber-js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/testcookbook/js-cucumber-selenium.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/testcookbook/js-cucumber-selenium/issues"
-  },
-  "homepage": "https://github.com/testcookbook/js-cucumber-selenium#readme",
   "dependencies": {
     "assert": "^1.4.1",
-    "canvas": "^2.3.1",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "chromedriver": "^2.24.1",
-    "cjs": "0.0.11",
-    "cucumber": "^1.3.0",
-    "custom-logger": "^0.3.1",
-    "fs": "0.0.1-security",
-    "geckodriver": "^1.1.3",
-    "id": "0.0.0",
-    "jdenticon": "^2.1.1",
-    "loader": "^2.1.1",
-    "selenium-webdriver": "^3.0.0-beta-3",
-    "sleep": "^6.0.0",
-    "utils": "^0.3.1",
-    "wd": "^1.11.1",
-    "xpath": "0.0.27"
+    "cucumber": "^5.1.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "sleep": "^6.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "scripts": {
+    "test": "./node_modules/cucumber/bin/cucumber-js"
+  },
+  "author": "Ankita Patel",
+  "license": "ISC"
 }
